tinker with logging and reformatting