@@ -1,6 +1,5 @@
 package net.parttimepolymath;
 
-
 import com.amazonaws.services.lambda.runtime.events.APIGatewayV2HTTPEvent;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,11 +15,10 @@ class ParsedEventTest {
 
     @BeforeEach
     void setUp() {
-        APIGatewayV2HTTPEvent event= APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/cidr/eu-west-2/S3")
-                .withPathParameters(Map.of("region", "eu-west-2", "service", "S3"))
-                .withQueryStringParameters(Collections.singletonMap("ipv6", "true"))
-                .build();
+        APIGatewayV2HTTPEvent event =
+                APIGatewayV2HTTPEvent.builder().withRawPath("/v1/cidr/eu-west-2/S3").withPathParameters(Map.of(
+                        "region", "eu-west-2", "service", "S3")).withQueryStringParameters(Collections.singletonMap(
+                                "ipv6", "true")).build();
         instance = new ParsedEvent(event);
     }
 
@@ -28,15 +26,11 @@ class ParsedEventTest {
     void isIpv6() {
         assertTrue(instance.isIpv6());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/cidr/region/service")
-                .withQueryStringParameters(Collections.singletonMap("fred", "mary"))
-                .build());
+        instance =
+                new ParsedEvent(APIGatewayV2HTTPEvent.builder().withRawPath("/v1/cidr/region/service").withQueryStringParameters(Collections.singletonMap("fred", "mary")).build());
         assertFalse(instance.isIpv6());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/cidr/region/service")
-                .build());
+        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder().withRawPath("/v1/cidr/region/service").build());
         assertFalse(instance.isIpv6());
     }
 
@@ -44,14 +38,10 @@ class ParsedEventTest {
     void isRegions() {
         assertFalse(instance.isRegions());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/regions")
-                .build());
+        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder().withRawPath("/v1/regions").build());
         assertTrue(instance.isRegions());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/fred")
-                .build());
+        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder().withRawPath("/v1/fred").build());
         assertFalse(instance.isRegions());
     }
 
@@ -59,14 +49,10 @@ class ParsedEventTest {
     void isServices() {
         assertFalse(instance.isServices());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/services")
-                .build());
+        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder().withRawPath("/v1/services").build());
         assertTrue(instance.isServices());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/fred")
-                .build());
+        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder().withRawPath("/v1/fred").build());
         assertFalse(instance.isServices());
     }
 
@@ -74,34 +60,29 @@ class ParsedEventTest {
     void isCidr() {
         assertTrue(instance.isCidr());
         assertEquals("eu-west-2", instance.getRegion());
-        assertEquals("S3", instance. getService());
+        assertEquals("S3", instance.getService());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/cidr/eu-west-2")
-                .withPathParameters(Collections.singletonMap("region", "eu-west-2"))
-                .build());
+        instance =
+                new ParsedEvent(APIGatewayV2HTTPEvent.builder().withRawPath("/v1/cidr/eu-west-2").withPathParameters(Collections.singletonMap("region", "eu-west-2")).build());
         assertTrue(instance.isCidr());
         assertEquals("eu-west-2", instance.getRegion());
-        assertNull(instance. getService());
+        assertNull(instance.getService());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withRawPath("/v1/cidr")
-                .build());
+        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder().withRawPath("/v1/cidr").build());
         assertTrue(instance.isCidr());
         assertNull(instance.getRegion());
-        assertNull(instance. getService());
+        assertNull(instance.getService());
 
-        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder()
-                .withPathParameters(Map.of("region", "eu-west-2", "service", "S3"))
-                .withRawPath("/v1/cidr/eu-west-2/S3/some/other/junk")
-                .build());
+        instance = new ParsedEvent(APIGatewayV2HTTPEvent.builder().withPathParameters(Map.of("region", "eu-west-2",
+                "service", "S3")).withRawPath("/v1/cidr/eu-west-2/S3/some/other/junk").build());
         assertTrue(instance.isCidr());
         assertEquals("eu-west-2", instance.getRegion());
-        assertEquals("S3", instance. getService());
+        assertEquals("S3", instance.getService());
     }
 
     @Test
     void testToString() {
-        assertEquals("ParsedEvent[ipv6=true,regions=false,services=false,cidr=true,region=eu-west-2,service=S3]", instance.toString());
+        assertEquals("ParsedEvent[ipv6=true,regions=false,services=false,cidr=true,region=eu-west-2,service=S3]",
+                instance.toString());
     }
 }
